# pyPMM

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  activations.html  advanced.html  basemodule.html  conformal.html  eigen_util.html  genindex.html  graph_util.html  index.html  manip.html  model.html  model_util.html  models.html  modules.html  nns.html  objects.inv  pmms.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  simple.html  tree_util.html  typing.html  utils.html
ParametricMatrixModels/: AffineEigenvaluePMM.py  AffineObservablePMM.py  BaseModule.py  Model.py  Modules.py  Scalers.py  SubsetModule.py  Training.py  __init__.py  _affine_backing_funcs.py  _helpers.py  _regression_backing_funcs.py
ParametricMatrixModels/Modules/: AffineObservablePMM.py  Func.py  (+9 more)
_modules/: index.html
_sources/: activations.rst.txt  advanced.rst.txt  basemodule.rst.txt  conformal.rst.txt  index.rst.txt  manip.rst.txt  models.rst.txt  modules.rst.txt  nns.rst.txt  pmms.rst.txt  simple.rst.txt  tree_util.rst.txt  typing.rst.txt  utils.rst.txt
docs/: Makefile
examples/: basic_regression.html  examples.html
parametricmatrixmodels/: __init__.py  conformalizedmodel.py  conformalmodel.py  eigen_util.py  graph_util.py  model.py  model_util.py  nonsequentialmodel.py  progressbar.py  scalers.py  sequentialmodel.py  training.py  tree_util.py  typing.py
scripts/: generate_activationfunc_modules.py
tests/: test_affineeigenvaluepmm.py  test_affinehermitianmatrix.py  test_affineobservablepmm.py  test_bias.py  test_compile_time.py  test_concatenateleaves.py  test_conformal.py  test_constant.py  test_eigen.py  test_einsum.py  test_elementwise_activations.py  test_expectationvaluesum.py  test_finetuning.py  test_flatten.py  test_funcbase.py  test_graph_util.py  test_integration.py  test_matmul.py  test_nonsequentialmodel.py  test_onehot.py  test_prelu.py  test_reshape.py  test_scalers.py  test_sequentialmodel.py  test_training.py  test_transitionamplitudesum.py  test_tree_util.py  test_treeflatten.py  test_treekey.py
(+110 files in other folders)
