[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "black", "isort", "flake8", "flake8-pyproject"]
build-backend = "setuptools.build_meta"

[project]
name = "parametric-matrix-models"
authors = [
    { name = "Patrick Cook", email = "cookpat4@msu.edu" },
]
description = "Python package for Parametric Matrix Models"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["PMM", "Parametric Matrix Models", "Emulation", "Machine Learning"]
license = "GPL-3.0-or-later"
classifiers= [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax",
    "dill",
    "jaxtyping",
    "beartype",
    "ordered-set",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
cuda = [
    "jax[cuda]",
]
rocm = [
    "jax[rocm]",
]
examples = [
    "matplotlib",
]
docs = [
    "sphinx",
    "numpydoc",
    "packaging",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxcontrib-bibtex",
    "sphinx-autodoc-typehints",
    "matplotlib",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/Parametric-Matrix-Models"

[tool.setuptools_scm]

[tool.black]
line_length = 79
preview = true
enable_unstable_feature = ["string_processing"]

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
extend-ignore = [
    "E203",  # Whitespace before ':'
    "F722",  # Syntax error in forward annotation (https://docs.kidger.site/jaxtyping/faq/)
]
per-file-ignores = [
    "__init__.py:E402,F401", # Import not at top of file, Unused import
    ]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",  # show summary of all test outcomes
]
